--- a/css/login.css
+++ b/css/login.css
@@ -87,8 +87,8 @@ li .aheader:hover {
 .wrapper p {
   width: 100%;
   text-align: center;
-
-  color: #d7b94b;
+  margin-bottom: 20px;
+  color: #ffd500;
   font-family: 'Merriweather', serif;
   font-size: 2em;
 }
